--- a/resources/sass/components/_general.scss
+++ b/resources/sass/components/_general.scss
@@ -25,6 +25,7 @@
         height: 70vh;
         overflow-y: auto;
         overflow-x: hidden;
+        scrollbar-width: none;
     }
     .users::-webkit-scrollbar {
         visibility: hidden;
