--- a/resources/sass/components/child/_list.scss
+++ b/resources/sass/components/child/_list.scss
@@ -1,6 +1,7 @@
 .childList{
     position: relative;
     overflow-y: scroll;
+    scrollbar-width: none;
     &::-webkit-scrollbar {
         width: 0 !important;
         height: 0 !important;
